[gd_scene load_steps=3 format=3 uid="uid://bqm8j7vx1qn4j"]

[ext_resource type="Script" uid="uid://je2ghh8ialld" path="res://Scenes/MainMenu/MainMenuController.gd" id="1_main_menu"]
[ext_resource type="Theme" uid="uid://ojrlaftklmmr" path="res://theme.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_main_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitlePanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/TitlePanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/TitlePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/TitlePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 56
text = "ü•∏ VIRTUAL TRY-ON"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer/TitlePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Mustache Edition"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonsPanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/ButtonsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ButtonsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TryOnButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "üé≠ Start Virtual Try-On"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "‚ùå Quit"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/InfoPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CourseLabel" type="Label" parent="CenterContainer/VBoxContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "üìö Pengolahan Citra Digital"
horizontal_alignment = 1

[node name="UniversityLabel" type="Label" parent="CenterContainer/VBoxContainer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Politeknik Negeri Bandung"
horizontal_alignment = 1
